<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">MCC Object Detection</string>
    <string name="action_settings">Settings</string>
    <string name="btn_select_image_txt">Gallery Image</string>
    <string name="btn_scnRek_select_image_txt">Gallery Image</string>
    <string name="btn_image_blur_txt">Image Blurring</string>
    <string name="btn_matrix_mult_txt">Matrix Multiply </string>
    <string name="btn_image_blend_txt">Image Blending</string>
    <string name="btn_prime_fact_txt">Prime Factorization</string>
    <string name="title_activity_image_blur">Image Blurring</string>
    <string name="btn_blur_txt">Blur</string>
    <string name="imgView_selected_image_desc">Selected Image</string>
    <string name="btn_select_dropbox_image_txt">DropBox Image</string>
    <string name="btn_login_DropBox_txt">Login to DropBox</string>
    <string name="serverURL">http://13.64.153.243:8080/</string>
    <!-- 192.168.9.102:8080/195.43.9.31:80  -->
    <string name="costPerGB">2.5</string>
    <string name="cloudProviderUUID">16eba865-ce69-4ef4-82a6-8ac0c883ffd6</string>
    <string name="app_dir">simplicity</string>
    <string name="btn_power_function_txt">Power Function</string>
    <string name="btn_sort_prime_txt">Sort-Prime</string>
    <string name="title_activity_matrix_multiply">Matrix Multiply</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_prime_factorization">Prime Factorization</string>
    <string name="title_activity_power_function">Power Function</string>
    <string name="title_activity_image_blending">Image Blending</string>
    <string name="title_activity_sort_prime">Sort and Primes</string>
    <string name="btn_select_device_file_txt">Select Matrix File (Device)</string>
    <string name="btn_multiply_txt">Multiply</string>
    <string name="btn_select_DPX_file_txt">Select Matrix File (DropBox)</string>
    <string name="btn_select_device_image_txt">Select Image (Device)</string>
    <string name="btn_select_DPX_image_txt">Select Image (DropBox)</string>
    <string name="btn_blend_txt">Blend</string>
    <string name="btn_select_device_numbers_txt">Select Numbers File (Device)</string>
    <string name="btn_select_DBX_numbers_txt">Select Numbers File (DropBox)</string>
    <string name="btn_prime_txt">Find Prime Factors</string>
    <string name="title_activity_bubble_sort">Bubble Sort Activity</string>
    <string name="btn_select_device_list_txt">Select List File (Device)</string>
    <string name="btn_select_DBX_list_txt">Select List File (DropBox)</string>
    <string name="btn_sort_txt">Sort</string>
    <string name="btn_sort_list_txt">List Sorting</string>
    <string name="btn_power_fn_txt">Compute Power</string>
    <string name="title_activity_test">Test Activity</string>
    <string name="btn_test_txt">Show Net Context</string>
    <string name="txt_label_userPrefs_text">User Preferences</string>
    <string name="chk_force_local_txt">Force Local Processing</string>
    <string name="chk_force_offloading_txt">Force Remote Processing</string>
    <string name="chk_automatic_offloading_txt">Automatic Decision</string>
    <string name="chk_simple_decision_txt">Simple Decision</string>
    <string name="btn_test_txt1">Show Profiler Data</string>
    <string name="ticker_text">The Simplicity framework is running</string>
    <string name="notification_title_text">The Simplicity framework</string>
    <string name="notification_content_text">The Simplicity framework is running</string>
    <string name="DropBox_APP_KEY">4zmiail6z7kdppi</string>
    <string name="DropBox_APP_SECRET">aicu2iu6e76xhwb</string>
    <string name="title_activity_service_provider">Service Provider</string>
    <string name="btn_start_service_activity_txt">Start Service Provider Mode</string>
    <string name="title_activity_add_provider">Add Service Provider</string>
    <string name="btn_add_provider_txt">Add Provider</string>
    <string name="txt_insert_provider_ip_txt">Insert Provider IP</string>
    <string name="btn_start_add_provider_activity">Add Service Provider</string>
    <string name="btn_update_cloud_resources_txt">Update Cloud Res.</string>
    <string name="btn_autorun_txt">Autorun</string>
    <string name="btn_cancelRun_txt">Cancel</string>
    <string name="btn_Object_Recognition_txt">Object Detection</string>
    <string name="btn_recognize_txt">Recognize</string>
    <string name="btn_scnRek_recognize_txt">Recognize</string>
    <string name="title_activity_scene_recognition">Scene Recognition</string>
    <string name="btn_scene_Recognition_txt">Scene Recognition</string>
    <string name="btn_show_profiler_data_txt">Show Profiler Data</string>

</resources>