<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/txt_label_userPrefs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_label_userPrefs_text" />

            <RadioGroup
                android:id="@+id/rdBtn_offloading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/chk_force_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_force_local_txt" />

                <RadioButton
                    android:id="@+id/chk_force_offloading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_force_offloading_txt" />

                <RadioButton
                    android:id="@+id/chk_automatic_offloading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_automatic_offloading_txt" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_update_cloud_resources"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_update_cloud_resources_txt" />

            <Button
                android:id="@+id/btn_show_profiler_data"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_show_profiler_data_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_Object_Recognition"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Object_Recognition_txt" />

            <!-- <Button
                 android:id="@+id/btn_scene_Recognition"
                 style="@style/AppBaseTheme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_scene_Recognition_txt" />-->
        </LinearLayout>

    </LinearLayout>

</ScrollView>