<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_select_image"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_select_image_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_recognize"
                style="@style/AppBaseTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_recognize_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:text="Interval: " />

            <EditText
                android:id="@+id/txt_seconds"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:paddingTop="10dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:text="Ticks: " />

            <EditText
                android:id="@+id/txt_ticks"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:inputType="number"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_autorun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_autorun_txt" />

            <Button
                android:id="@+id/btn_cancelRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelRun_txt" />

            <TextView
                android:id="@+id/txt_actualTicks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:paddingTop="10dp"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:padding="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgView_selected_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/imgView_selected_image_desc" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

